--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@
   /* Colors */
   --primary_soft_blue: hsl(215, 51%, 70%);
   --primary_cyan: hsl(178, 100%, 50%);
+  --primary_bg_cyan: hsla(178, 100%, 50%, 0.5);
   --neutral_mainBg_dark_blue: hsl(217, 54%, 11%);
   --neutral_cardBg_dark_blue: hsl(216, 50%, 16%);
   --neutral_line_dark_blue: hsl(215, 32%, 27%);
@@ -49,8 +50,8 @@ img {
 }
 
 .card-images {
-  position: relative;
   cursor: pointer;
+  position: relative;
 }
 
 .main-image {
@@ -59,9 +60,26 @@ img {
 
 .overlay-image {
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 50%;
   right: 50%;
   transform: translate3d(50%, -50%, 0);
+  border-radius: var(--border_radius_image);
+  opacity: 0;
+  transition: background-color, opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.overlay-image img {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate3d(50%, -50%, 0);
+}
+
+.overlay-image:hover {
+  background-color: var(--primary_bg_cyan);
+  opacity: 1;
 }
 
 .card-body {
